# tanoshi

./: .gitignore
tanoshi/: Cargo.toml
tanoshi-lib/: Cargo.toml
tanoshi-lib/src/: lib.rs
tanoshi-web/: Cargo.toml  package.json  tailwind.config.js  webpack.config.js
tanoshi-web/graphql/: fetch_sources.graphql  query.graphql  schema.graphql
tanoshi-web/src/: app.rs  catalogue.rs  cover.rs  histories.rs  lib.rs  library.rs  manga.rs  query.rs  reader.rs  settings.rs  updates.rs  utils.rs
tanoshi-web/src/common/: bottombar.rs  cover.rs  events.rs  mod.rs  route.rs  spinner.rs  topbar.rs
tanoshi-web/static/: index.html
tanoshi-web/static/css/: styles.css
tanoshi/src/: config.rs  context.rs  db.rs  extension.rs  main.rs  proxy.rs
tanoshi/src/catalogue/: chapter.rs  manga.rs  mod.rs  source.rs
tanoshi/src/db/: mod.rs
tanoshi/src/graphql/: mod.rs
