[package]
name = "tanoshi-lib"
version = "0.15.0"
authors = ["Muhammad Fadhlika <fadhlika@gmail.com>"]
edition = "2018"
description = "Tanoshi library"
repository= "https://github.com/faldez/tanoshi"
license = "MIT"
readme = "README.md"
exclude = [
    ".github/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["model", "rest", "extensions"]
model = []
rest = ["model"]
extensions = ["model"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.8"
dirs = "3"
rust-crypto = "0.2"
url = "^2.1"
ureq = "1.5"

[build-dependencies]
rustc_version = "0.2"
